# seth-godin-sentance-generator

./: .gitignore  generate.py  pyproject.toml  readme.md  train.py
notebooks/: eda.ipynb
src/: __init__.py  data_processing.py  models.py  utils.py
