[tool.poetry]
name = "seth-godin-sentance-generator"
version = "0.1.0"
description = ""
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
contractions = "^0.0.52"
pandas = "^1.3.0"
scikit-learn = "^0.24.2"
morty = "^0.1.1"
ipykernel = "^6.0.3"
tensorflow-gpu = "^2.5.0"
tensorflow-hub = "^0.12.0"
transformers = "^4.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
